--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,12 @@
+# Entorno completo local (entrenamiento, tracking, notebooks)
 pandas==2.3.3
 numpy==2.0.2
 scikit-learn==1.6.1
+scipy==1.13.1
+mlflow==3.6.0  # tracking de experimentos
+dvc==3.64.1
+jupyter==1.1.1
+matplotlib==3.9.4
+seaborn==0.13.2
 streamlit==1.50.0
 python-dateutil==2.9.0.post0
